examples/pass/type_ascription_function_type.uplp
-- category = 'value'
--
-- [metadata]
-- type = 'Closure'
(|x: Num| x) : Num -> Num