examples/fail/function_arg_check_mismatch.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.mismatch"
--
-- [metadata.expectation]
-- expected = "Bool"
-- got = "Num"
(|x: Num| true) : Bool -> Bool 